Fixes #239 Overlap issue of search bar and footer navbar (#245)
Remove HEAD

--- a/src/app/search-bar/search-bar.component.css
+++ b/src/app/search-bar/search-bar.component.css
@@ -26,6 +26,8 @@
   box-shadow: none;
   padding-left: 16px;
   font-family: Arial, sans-serif;
+  position: initial;
+  padding-bottom: 2px;
 }
 
 #nav-button{
@@ -35,6 +37,7 @@
   color: #0066ff;
   box-shadow: none;
   border: none;
+  position: initial;
 }
 
 #nav-group{
